<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateNoteActivity">

    <LinearLayout
        android:id="@+id/ActionBar_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/Back_ImageView"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/app_name"
            app:tint="@color/RED_WAVE"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/SaveNote_ImageView"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_done"
            android:contentDescription="@string/app_name"
            app:tint="@color/RED_WAVE"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/ActionBar_Layout"
        app:layout_constraintBottom_toTopOf="@id/Extra_Layout"
        android:orientation="vertical">

        <EditText
            android:id="@+id/NoteTitle_EditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:hint="@string/NOTE_TITLE"
            android:textSize="@dimen/_13ssp"
            android:inputType="text"
            android:importantForAutofill="no"
            android:imeOptions="actionNext"
            android:maxLength="10"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/NoteDateTime_TextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/NOTE_DATE"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/RED_WAVE"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/NoteText_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/NOTE_TEXT"
                    android:textSize="@dimen/_13ssp"
                    android:inputType="textMultiLine"
                    android:autoLink="all"
                    android:importantForAutofill="no"
                    android:imeOptions="actionDone"
                    android:background="@android:color/transparent"/>

                <!--Extra-->
                <ImageView
                    android:id="@+id/NoteImage_ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_250sdp"
                    android:layout_margin="@dimen/_15sdp"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:id="@+id/VoiceNote_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <ImageView
                        android:id="@+id/PauseAndResumeVoice_ImageView"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:src="@drawable/ic_resume"
                        android:contentDescription="@string/app_name"
                        app:tint="@color/RED_WAVE"/>

                    <View
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_25sdp"/>

                    <com.masoudss.lib.WaveformSeekBar
                        android:id="@+id/VoiceWave_SeekBar"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_weight="1"
                        app:wave_corner_radius="@dimen/_5sdp"
                        app:wave_gravity="center"
                        app:wave_background_color="@color/RED_WAVE"
                        app:wave_progress_color="@color/black"
                        app:wave_gap="@dimen/_1sdp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Extra_Layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/AddImage_ImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_add_image"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_draw"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name" />
        <ImageView
            android:id="@+id/AddVoice_ImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_microphone"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name" />

        <ImageView
            android:id="@+id/Favourite_ImageView"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_un_favourite"
            android:layout_margin="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            app:tint="@color/RED_FAVOURITE"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>